--- a/03-frontend/base_files/add_review.html
+++ b/03-frontend/base_files/add_review.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="logo.png" alt="Application Logo" class="logo">
+        <nav>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+        </nav>
+    </header>
     <main>
         <form id="review-form">
             <h2>Add a Review</h2>
@@ -19,6 +25,9 @@
             <button type="submit">Submit</button>
         </form>
     </main>
+    <footer>
+       <p>@ 2024 HBnB Evolution. All rights reserved.</p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
