--- a/03-frontend/base_files/login.html
+++ b/03-frontend/base_files/login.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="logo.png" alt="Application Logo" class="logo">
+        <nav>
+            <a href="index.html" id="home-link" class="home-button">Home</a>
+        </nav>
+    </header>
     <main>
         <form id="login-form">
             <h2>Login</h2>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
             
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
@@ -19,6 +25,9 @@
             <button type="submit">Login</button>
         </form>
     </main>
+    <footer>
+        <p>&copy; 2024 HBnB Evolution. All rights reserved.</p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
