--- a/03-frontend/base_files/place.html
+++ b/03-frontend/base_files/place.html
@@ -7,23 +7,60 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="logo.png" alt="Application Logo" class="logo">
+        <nav>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+        </nav>
+    </header>
     <main>
-        <section id="place-details">
-            <!-- Place details will be populated dynamically -->
+        <section id="place-details" class="place-details">
+            <h1>Beautiful Beach House</h1>
+            <img src="sample1.jpg" alt="Place Image" class="place-image-large">
+            <div class="place-info">
+                <p><strong>Host:</strong> John Doe</p>
+                <p><strong>Price per night:</strong> $150</p>
+                <p><strong>Location:</strong> Los Angeles, United States</p>
+                <p><strong>Description:</strong> A beautiful beach house with amazing views...</p>
+                <p><strong>Amenities:</strong> WiFi, Pool, Air Conditioning</p>
+            </div>
         </section>
         <section id="reviews">
-            <!-- Reviews will be populated dynamically -->
+            <h2>Reviews</h2>
+            <div class="review-card">
+                <p><strong>Jane Smith:</strong> Great place to stay!</p>
+                <p><strong>Rating:</strong> ★★★★★</p>
+            </div>
+            <div class="review-card">
+                <p><strong>Robert Brown:</strong> Amazing location and very comfortable.</p>
+                <p><strong>Rating:</strong> ★★★★★</p>
+            </div>
         </section>
-        <section id="add-review">
+        <section id="add-review-link">
+            <a href="add_review.html" class="add-review-button">Add Review</a>
+        </section>
+        <section id="add-review" class="add-review">
             <h2>Add a Review</h2>
-            <form id="review-form">
-                <label for="review-text">Review:</label>
+            <form id="review-form" class="add-review-form">
+                <label for="review-text">Your Review:</label>
                 <textarea id="review-text" name="review-text" required></textarea>
                 
-                <button type="submit">Submit</button>
+                <label for="review-rating">Rating:</label>
+                <select id="review-rating" name="review-rating" required>
+                    <option value="5">5 Stars</option>
+                    <option value="4">4 Stars</option>
+                    <option value="3">3 Stars</option>
+                    <option value="2">2 Stars</option>
+                    <option value="1">1 Star</option>
+                </select>
+
+                <button type="submit">Submit Review</button>
             </form>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2024 HBnB Evolution. All rights reserved.</p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
